WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97559
MediaStream API: Enhance MediaConstraints to make it easier to get the constraint data
https://bugs.webkit.org/show_bug.cgi?id=97559
Summary
MediaStream API: Enhance MediaConstraints to make it easier to get the constr...
Tommy Widenflycht
Reported
2012-09-25 05:25:09 PDT
Instead of just returning the names, return a pair of name and value.
Attachments
Patch
(13.85 KB, patch)
2012-09-25 05:36 PDT
,
Tommy Widenflycht
abarth
: review+
Details
Formatted Diff
Diff
Patch that belongs to another bug.
(41.26 KB, text/plain)
2012-09-26 01:11 PDT
,
Tommy Widenflycht
no flags
Details
Patch for landing
(13.90 KB, patch)
2012-09-27 04:51 PDT
,
Tommy Widenflycht
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tommy Widenflycht
Comment 1
2012-09-25 05:36:29 PDT
Created
attachment 165590
[details]
Patch
WebKit Review Bot
Comment 2
2012-09-25 05:38:26 PDT
Please wait for approval from
abarth@webkit.org
,
dglazkov@chromium.org
,
fishd@chromium.org
,
jamesr@chromium.org
or
tkent@chromium.org
before submitting, as this patch contains changes to the Chromium public API. See also
https://trac.webkit.org/wiki/ChromiumWebKitAPI
.
Peter Beverloo (cr-android ews)
Comment 3
2012-09-25 05:52:35 PDT
Comment on
attachment 165590
[details]
Patch
Attachment 165590
[details]
did not pass cr-android-ews (chromium-android): Output:
http://queues.webkit.org/results/14033036
Tommy Widenflycht
Comment 4
2012-09-25 05:57:03 PDT
Hmm, can really see how my patch could have broken cr-android :/ out/Release/obj.target/Source/WebCore/WebCore.gyp/libwebcore_remaining.a(InspectorDebuggerAgent.o): in function .LTHUNK29:Source/WebCore/inspector/InspectorDebuggerAgent.cpp:633: error: undefined reference to 'WebCore::InspectorFrontend::Debugger::scriptParsed(WTF::String const&, WTF::String const&, int, int, int, int, bool const*, WTF::String const*)' collect2: ld returned 1 exit status
Tommy Widenflycht
Comment 5
2012-09-25 06:07:25 PDT
s/can/can't/
WebKit Review Bot
Comment 6
2012-09-25 09:32:49 PDT
Comment on
attachment 165590
[details]
Patch Rejecting
attachment 165590
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: WebCore/platform/mediastream/MediaConstraints.h patching file Tools/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Tools/DumpRenderTree/chromium/MockWebRTCPeerConnectionHandler.cpp Hunk #1 FAILED at 120. 1 out of 1 hunk FAILED -- saving rejects to file Tools/DumpRenderTree/chromium/MockWebRTCPeerConnectionHandler.cpp.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force', u'--reviewer', u'Adam Barth']" exit_code: 1 cwd: /mnt/git/webkit-commit-queue Full output:
http://queues.webkit.org/results/14002812
Tommy Widenflycht
Comment 7
2012-09-26 01:11:12 PDT
Created
attachment 165745
[details]
Patch that belongs to another bug.
Tommy Widenflycht
Comment 8
2012-09-27 04:51:08 PDT
Created
attachment 165977
[details]
Patch for landing
WebKit Review Bot
Comment 9
2012-09-27 07:56:38 PDT
Comment on
attachment 165977
[details]
Patch for landing Clearing flags on attachment: 165977 Committed
r129764
: <
http://trac.webkit.org/changeset/129764
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug