MediaStream API: Enhance MediaConstraints to make it easier to get the constraint data https://bugs.webkit.org/show_bug.cgi?id=97559

Reviewed by Adam Barth.

Source/Platform:

Refactored to mimic the new MediaConstraints api.

* chromium/public/WebMediaConstraints.h:
(WebCore):
(WebKit::WebMediaConstraint::WebMediaConstraint):
(WebMediaConstraint):
(WebKit):
(WebMediaConstraints):

Source/WebCore:

Instead of just returning the names, return a pair of name and value.

Existing tests cover this patch.

* Modules/mediastream/MediaConstraintsImpl.cpp:
(WebCore::MediaConstraintsImpl::initialize):
(WebCore::MediaConstraintsImpl::getMandatoryConstraints):
(WebCore::MediaConstraintsImpl::getOptionalConstraints):
(WebCore::MediaConstraintsImpl::getOptionalConstraintValue):
* Modules/mediastream/MediaConstraintsImpl.h:
(MediaConstraintsImpl):
* platform/chromium/support/WebMediaConstraints.cpp:
(WebKit::WebMediaConstraint::WebMediaConstraint):
(WebKit):
(WebKit::WebMediaConstraints::getMandatoryConstraints):
(WebKit::WebMediaConstraints::getOptionalConstraints):
* platform/mediastream/MediaConstraints.h:
(WebCore::MediaConstraint::MediaConstraint):
(MediaConstraint):
(WebCore):
(MediaConstraints):

Tools:

Refactoring for the new WebMediaConstraints api.

* DumpRenderTree/chromium/MockConstraints.cpp:
(MockConstraints::verify):


Canonical link: https://commits.webkit.org/115775@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129764 268f45cc-cd09-0410-ab3c-d52691b4dbfc