Source/WebCore/Modules/mediastream/MediaConstraintsImpl.h
@@ -47,8 +47,8 @@ public:
     static PassRefPtr<MediaConstraintsImpl> create(const Dictionary&, ExceptionCode&);
     virtual ~MediaConstraintsImpl();
 
-    virtual void getMandatoryConstraintNames(Vector<String>& names) const OVERRIDE;
-    virtual void getOptionalConstraintNames(Vector<String>& names) const OVERRIDE;
+    virtual void getMandatoryConstraints(Vector<MediaConstraint>&) const OVERRIDE;
+    virtual void getOptionalConstraints(Vector<MediaConstraint>&) const OVERRIDE;
 
     virtual bool getMandatoryConstraintValue(const String& name, String& value) const OVERRIDE;
     virtual bool getOptionalConstraintValue(const String& name, String& value) const OVERRIDE;
@@ -58,8 +58,7 @@ private:
     bool initialize(const Dictionary&);
 
     HashMap<String, String> m_mandatoryConstraints;
-    Vector<String> m_optionalConstraintNames;
-    Vector<String> m_optionalConstraintValues;
+    Vector<MediaConstraint> m_optionalConstraints;
 };
 
 } // namespace WebCore
